# PP-CLI-Workshop

./: .gitignore  AGENTS.md  README.md  WORKSHOP.md  package-lock.json  package.json
evals/: brew.eval.js  checkout.eval.js  paypal.eval.js
leaderboard/: fly.toml  index.html  package.json  render.yaml  server.js
node-cli/: node_modules  package.json
node-cli/src/: events.jsonl  index.js
node-cli/src/commands/workshop/: bonus-paypal-check.js  bonus-paypal.js  brew-check.js  brew.js  checkin.js  config.js
node-cli/src/utils/: agent.js  cli-agent-sim.js  config.js  ipc.js  prompt.js
python-cli/: README.md  pyproject.toml
python-cli/evals/: brew_eval.py
python-cli/workshop/: main.py
python-cli/workshop/commands/: checkin.py  config_cmd.py  exercise.py  exercise_check.py
python-cli/workshop/utils/: agent.py  config.py  prompts.py
scripts/: preflight.js  tmux-workshop.sh
