[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "paypal-cli-workshop"
version = "1.0.0"
description = "AI Engineer SF — Agentic CLI Workshop (Python)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "questionary>=2.0",
    "httpx>=0.27",
]

[project.scripts]
workshop = "workshop.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["workshop*"]
